--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "si-file",
 	"version": "1.0.0",
-	"description": "A querystring parser that supports nesting and arrays, with a depth limit",
+	"description": "A A general-purpose File object to assist with any Node project",
 	"homepage": "https://github.com/j-steve/si-file",
 	"keywords": ["util", "file", "os", "fs", "promise"],
 	"author": "J. Stephen Sichina",
@@ -9,9 +9,13 @@
 		"type": "git",
 		"url": "git+https://github.com/j-steve/si-file.git"
 	},
-	"main": "lib/index.js",
+	"main": "src/index.js",
 	"engines": {
 		"node": ">=0.6"
 	},
-	"dependencies": {}
+	"dependencies": {
+		"body-parser": "1.13.x",
+		"cookie-parser": "1.3.x",
+		"debug": "2.2.x"
+	}
 }
