--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,4 +1,4 @@
 file.reference.si-file-lib=lib
 file.reference.si-file-src=src
 files.encoding=UTF-8
-source.folder=${file.reference.si-file-lib}
+source.folder=${file.reference.si-file-src}
