--- a/package.json
+++ b/package.json
@@ -1,21 +1,27 @@
 {
-	"name": "si-file",
-	"version": "1.0.3",
-	"description": "A general-purpose File object to assist with any Node project",
-	"homepage": "https://github.com/j-steve/si-file",
-	"keywords": ["util", "file", "os", "fs", "promise"],
-	"author": "J. Stephen Sichina",
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/j-steve/si-file.git"
-	},
-	"main": "src/index.js",
-	"engines": {
-		"node": ">=0.6"
-	},
-	"dependencies": {
-		"body-parser": "1.13.x",
-		"cookie-parser": "1.3.x",
-		"debug": "2.2.x"
-	}
+  "name": "si-file",
+  "version": "1.0.4",
+  "description": "A general-purpose File object to assist with any Node project",
+  "homepage": "https://github.com/j-steve/si-file",
+  "keywords": [
+    "util",
+    "file",
+    "os",
+    "fs",
+    "promise"
+  ],
+  "author": "J. Stephen Sichina",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/j-steve/si-file.git"
+  },
+  "main": "src/index.js",
+  "engines": {
+    "node": ">=0.6"
+  },
+  "dependencies": {
+    "body-parser": "1.13.x",
+    "cookie-parser": "1.3.x",
+    "debug": "2.2.x"
+  }
 }
