--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,4 +1,6 @@
+file.reference.NetBeansProjects-si-file=.
 file.reference.si-file-lib=lib
 file.reference.si-file-src=src
 files.encoding=UTF-8
+site.root.folder=${file.reference.NetBeansProjects-si-file}
 source.folder=${file.reference.si-file-src}
