--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "si-file",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "A general-purpose File object to assist with any Node project",
   "homepage": "https://github.com/j-steve/si-file",
   "keywords": [
@@ -15,6 +15,9 @@
     "type": "git",
     "url": "git+https://github.com/j-steve/si-file.git"
   },
+  "bugs": {
+    "url": "http://github.com/request/request/issues"
+  },
   "main": "src/index.js",
   "engines": {
     "node": ">=0.6"
@@ -23,5 +26,12 @@
     "body-parser": "1.13.x",
     "cookie-parser": "1.3.x",
     "debug": "2.2.x"
+  },
+  "scripts": {
+    "test": "npm run lint",
+    "lint": "eslint src/ *.js tests/ && echo Lint passed."
+  },
+  "devDependencies": {
+    "eslint": "2.10.x"
   }
 }
